--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mesto-react",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "homepage": "https://freemanforever.github.io/mesto-react/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
